--- a/client/index.html
+++ b/client/index.html
@@ -18,13 +18,14 @@
     <script src="views/LibraryView.js"></script>
     <script src="views/LibraryEntryView.js"></script>
     <script src="views/AppView.js"></script>
+    <script src="views/SongQueueView.js"></script>
+    <script src="views/SongQueueEntryView.js"></script>
 
     <script>
       $(function(){
         // set up model objects
-        var library = new Songs(songData);
+        var library = new Songs(songData); //creates a Songs collection of Song models
         var app = new AppModel({library: library});
-
         // build a view for the top level of the whole app
         var appView = new AppView({model: app});
 
